--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Dice Roller</string>
     <string name="roll_txt">Roll</string>
+    <string name="dice_number_1_desc_txt">dice number 1</string>
 </resources>
